registration and authentication after review